Added investigations to features

--- a/Features.ipynb
+++ b/Features.ipynb
@@ -368,242 +368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2785087\n",
-      "Index(['id', 'datetimeoccur', 'weekday', 'location', 'districtoccur', 'psa',\n",
-      "       'stoptype', 'inside_or_outside', 'gender', 'race', 'age',\n",
-      "       'individual_frisked', 'individual_searched', 'individual_arrested',\n",
-      "       'individual_contraband', 'vehicle_frisked', 'vehicle_searched',\n",
-      "       'vehicle_contraband', 'lat', 'lng', 'fips'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>datetimeoccur</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>location</th>\n",
-       "      <th>districtoccur</th>\n",
-       "      <th>psa</th>\n",
-       "      <th>stoptype</th>\n",
-       "      <th>inside_or_outside</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>race</th>\n",
-       "      <th>...</th>\n",
-       "      <th>individual_frisked</th>\n",
-       "      <th>individual_searched</th>\n",
-       "      <th>individual_arrested</th>\n",
-       "      <th>individual_contraband</th>\n",
-       "      <th>vehicle_frisked</th>\n",
-       "      <th>vehicle_searched</th>\n",
-       "      <th>vehicle_contraband</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lng</th>\n",
-       "      <th>fips</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1767776</td>\n",
-       "      <td>2014-05-14 00:00:00+00</td>\n",
-       "      <td>TUESDAY</td>\n",
-       "      <td>300 BLOCK S 13TH ST</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>pedestrian</td>\n",
-       "      <td>Outside</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Black - Non-Latino</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39.946671</td>\n",
-       "      <td>-75.162656</td>\n",
-       "      <td>4.210100e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1767787</td>\n",
-       "      <td>2014-05-14 00:00:00+00</td>\n",
-       "      <td>TUESDAY</td>\n",
-       "      <td>300 BLOCK S 13TH ST</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>pedestrian</td>\n",
-       "      <td>Outside</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Black - Latino</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39.946671</td>\n",
-       "      <td>-75.162656</td>\n",
-       "      <td>4.210100e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2305431</td>\n",
-       "      <td>2014-09-26 13:10:00+00</td>\n",
-       "      <td>FRIDAY</td>\n",
-       "      <td>300 BLOCK S 13TH ST</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>pedestrian</td>\n",
-       "      <td>Outside</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Black - Non-Latino</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39.946671</td>\n",
-       "      <td>-75.162656</td>\n",
-       "      <td>4.210100e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1739213</td>\n",
-       "      <td>2014-02-26 15:00:00+00</td>\n",
-       "      <td>WEDNESDAY</td>\n",
-       "      <td>2ND AND SPRING GARDEN ST</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>vehicle</td>\n",
-       "      <td>Outside</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Black - Non-Latino</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39.960704</td>\n",
-       "      <td>-75.141439</td>\n",
-       "      <td>4.210104e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2246508</td>\n",
-       "      <td>2014-08-29 19:55:00+00</td>\n",
-       "      <td>FRIDAY</td>\n",
-       "      <td>2nd and SPRING GARDEN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>vehicle</td>\n",
-       "      <td>Outside</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>White - Non-Latino</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39.960704</td>\n",
-       "      <td>-75.141439</td>\n",
-       "      <td>4.210104e+11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id           datetimeoccur    weekday                  location  \\\n",
-       "0  1767776  2014-05-14 00:00:00+00    TUESDAY       300 BLOCK S 13TH ST   \n",
-       "1  1767787  2014-05-14 00:00:00+00    TUESDAY       300 BLOCK S 13TH ST   \n",
-       "2  2305431  2014-09-26 13:10:00+00     FRIDAY       300 BLOCK S 13TH ST   \n",
-       "3  1739213  2014-02-26 15:00:00+00  WEDNESDAY  2ND AND SPRING GARDEN ST   \n",
-       "4  2246508  2014-08-29 19:55:00+00     FRIDAY     2nd and SPRING GARDEN   \n",
-       "\n",
-       "   districtoccur  psa    stoptype inside_or_outside gender  \\\n",
-       "0              6    3  pedestrian           Outside   Male   \n",
-       "1              6    3  pedestrian           Outside   Male   \n",
-       "2              6    3  pedestrian           Outside   Male   \n",
-       "3              6    1     vehicle           Outside   Male   \n",
-       "4              6    1     vehicle           Outside   Male   \n",
-       "\n",
-       "                 race  ...  individual_frisked  individual_searched  \\\n",
-       "0  Black - Non-Latino  ...                   0                    0   \n",
-       "1      Black - Latino  ...                   0                    0   \n",
-       "2  Black - Non-Latino  ...                   0                    0   \n",
-       "3  Black - Non-Latino  ...                   0                    0   \n",
-       "4  White - Non-Latino  ...                   0                    0   \n",
-       "\n",
-       "   individual_arrested  individual_contraband  vehicle_frisked  \\\n",
-       "0                    0                      0                0   \n",
-       "1                    0                      0                0   \n",
-       "2                    0                      0                0   \n",
-       "3                    0                      0                0   \n",
-       "4                    0                      0                0   \n",
-       "\n",
-       "   vehicle_searched  vehicle_contraband        lat        lng          fips  \n",
-       "0                 0                   0  39.946671 -75.162656  4.210100e+11  \n",
-       "1                 0                   0  39.946671 -75.162656  4.210100e+11  \n",
-       "2                 0                   0  39.946671 -75.162656  4.210100e+11  \n",
-       "3                 0                   0  39.960704 -75.141439  4.210104e+11  \n",
-       "4                 0                   0  39.960704 -75.141439  4.210104e+11  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "investigations = pd.read_csv(folder + 'investigations.csv', delimiter=',')\n",
+    "investigations['year'] = investigations['datetimeoccur'].apply(lambda x: x.split('-')[0])\n",
+    "investigations.dropna(subset=['lat', 'lng'], inplace=True)\n",
+    "\n",
     "print(len(investigations))\n",
     "print(investigations.columns)\n",
-    "investigations.head()\n",
-    "#investigations[(investigations['vehicle_contraband'] or investigations[individual_contraband])]"
+    "print(investigations.value_counts('individual_arrested'))"
    ]
   },
   {
@@ -793,6 +568,21 @@
     "stops_agg['dist_to_station'] = stops_agg.apply(lambda x: features.find_closest((x['mean_lat'], x['mean_lng']))[0], axis=1)\n",
     "stops_agg['closest_station'] = stops_agg.apply(lambda x: features.find_closest((x['mean_lat'], x['mean_lng']))[1], axis=1)\n",
     "stops_agg.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "investigations_coord_mask = features.get_coord_mask(investigations)\n",
+    "print(len(investigations_coord_mask.drop_duplicates(['mean_lat', 'mean_lng'])))\n",
+    "investigations_agg = pd.merge(investigations, investigations_coord_mask, on=['lat', 'lng'])\n",
+    "investigations_agg = investigations_agg.groupby(['year', 'mean_lat', 'mean_lng']).agg({'objectid': 'count', 'individual_arrested': 'sum', }).reset_index().rename(columns={'objectid': 'investigations', 'individual_arrested': 'investigation_arrests',  })\n",
+    "investigations_agg['dist_to_station'] = investigations_agg.apply(lambda x: features.find_closest((x['mean_lat'], x['mean_lng']))[0], axis=1)\n",
+    "investigations_agg['closest_station'] = investigations_agg.apply(lambda x: features.find_closest((x['mean_lat'], x['mean_lng']))[1], axis=1)\n",
+    "investigations_agg.head()"
    ]
   }
  ],
